--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.8",
     "framer-motion": "^12.23.12",
@@ -34,7 +35,8 @@
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
