Annual Member Added

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
-    "flowbite-react": "^0.12.8",
+    "flowbite-react": "^0.12.13",
     "framer-motion": "^12.23.12",
     "html2canvas-pro": "^1.5.12",
     "jsonwebtoken": "^9.0.2",
