--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "5.22.0",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
@@ -40,6 +41,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "uploadthing": "^7.7.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
