--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "to-words": "^4.9.0",
     "uploadthing": "^7.7.4",
     "xlsx": "^0.18.5"
   },
