--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "5.22.0",
+    "@prisma/client": "^7.2.0",
+    "@prisma/extension-accelerate": "^3.0.1",
     "@uploadthing/react": "^7.3.3",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
@@ -30,7 +31,7 @@
     "framer-motion": "^12.23.12",
     "html2canvas-pro": "^1.5.12",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.3",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "^15.5.2",
     "next-auth": "^4.24.11",
@@ -55,7 +56,7 @@
     "@types/react-dom": "^19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "prisma": "5.22.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
