--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.6.0",
     "to-words": "^4.9.0",
     "uploadthing": "^7.7.4",
     "xlsx": "^0.18.5"
